--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Fractal by HTML5 UP</title>
+		<title>Rodrigo Vena</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,10 +18,9 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Rodrigo Vena</a></h1>
-					<p>MS in Computer Science at UCF <a href="http://html5up.net">HTML5 UP</a></p>
+					<p>MS in Computer Science at UCF</p>
 					<ul class="actions">
-						<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
-						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
+						<li><a href="#" class="button primary icon solid fa-download">Resume</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
@@ -30,8 +29,8 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Sed ipsum magna lorem tempus amet<br />
-					vehicula et gravida elementum</h2>
+					<h2>Analytical, Independent, passionate, and goal-oriented <br />
+					</h2>
 				</header>
 				<ul class="icons major">
 					<li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li>
@@ -40,7 +39,7 @@
 				</ul>
 			</section>
 
-		<!-- Two -->
+		<!-- Two
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
@@ -76,7 +75,7 @@
 				</div>
 			</section>
 
-		<!-- Three -->
+		<!-- Three
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
 					<h2>Magna leo sapien gravida</h2>
@@ -412,10 +411,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+				<p class="copyright">&copy; 2023 Rodrigo Vena. Powered by: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
 		<!-- Scripts -->
