--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h1><a href="#">Rodrigo Vena</a></h1>
 					<p>MS in Computer Science at UCF</p>
 					<ul class="actions">
-						<li><a href="#" class="button primary icon solid fa-download">Resume</a></li>
+						<li><a href="https://github.com/rndae/rndae.github.io/blob/b58b4462e4c2495ed304c6164cdf8090dc644e31/assets/resume.pdf" class="button primary icon solid fa-download">Resume</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
