--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<li><a href="https://github.com/rndae/rndae.github.io/blob/b58b4462e4c2495ed304c6164cdf8090dc644e31/assets/resume.pdf" class="button primary icon solid fa-download">Resume</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
+				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
@@ -32,11 +32,7 @@
 					<h2>Analytical, Independent, passionate, and goal-oriented <br />
 					</h2>
 				</header>
-				<ul class="icons major">
-					<li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li>
-					<li><span class="icon solid fa-sync"><span class="label">Process</span></span></li>
-					<li><span class="icon solid fa-cloud"><span class="label">Upload</span></span></li>
-				</ul>
+
 			</section>
 
 		<!-- Two
