--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Analytical, Independent, passionate, and goal-oriented <br />
+					<h2>Analytical, independent, passionate, and goal-oriented <br />
 					</h2>
 				</header>
 
