--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Rodrigo Vena</a></h1>
-					<p>Graduate student in Computer Science at University of Central Florida</p>
+					<p>Grad student in Computer Science at UCF</p>
 					<ul class="actions">
 						<li><a href="https://github.com/rndae/rndae.github.io/raw/b58b4462e4c2495ed304c6164cdf8090dc644e31/assets/resume.pdf" class="button primary icon solid fa-download">Resume</a></li>
 					</ul>
