--- a/index.html
+++ b/index.html
@@ -405,11 +405,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 			<footer id="footer">
+				<!--
 				<ul class="icons">
 					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; 2023 Rodrigo Vena. Powered by: <a href="http://html5up.net">HTML5 UP</a></p>
+				-->
+				<p class="copyright">&copy; 2023 Rodrigo Vena. Website designed by: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
 		<!-- Scripts -->
