--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 						<li><a href="https://github.com/rndae/rndae.github.io/raw/b58b4462e4c2495ed304c6164cdf8090dc644e31/assets/resume.pdf" class="button primary icon solid fa-download">Resume</a></li>
 					</ul>
 				</div>
-				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>
+				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div>
+				</div> <div class="actions"> <a href="https://github.com/rndae" class="button primary icon brands fa-github">GitHub</a> </div>
 			</header>
 		<!-- Footer -->
 			<footer id="footer">
