--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					</ul>
 				</div>
 				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div>
-				</div> <div class="actions"> <a href="https://github.com/rndae" class="button primary icon brands fa-github">GitHub</a> </div>
+				<div class="actions"> <a href="https://github.com/rndae" class="button primary icon brands fa-github">GitHub</a> </div>
 			</header>
 		<!-- Footer -->
 			<footer id="footer">
