--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Rodrigo Vena</a></h1>
-					<p>Grad student in Computer Science at UCF</p>
+					<p>I am a Fulbright scholar and a master of computer science graduate from the 
+						University of Central Florida. My research interests include software engineering, 
+						program analysis, and compiler design. Currently, I am collaborating as a researcher 
+						with Dr. Paul Gazzillo at the APPLeSEEdLab.</p>
 					<ul class="actions">
 						<li><a href="https://github.com/rndae/rndae.github.io/raw/b58b4462e4c2495ed304c6164cdf8090dc644e31/assets/resume.pdf" class="button primary icon solid fa-download">Resume</a></li>
 					</ul>
 				</div>
 				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>
-				<div class="actions"> <a href="https://github.com/rndae" class="button primary icon brands fa-github">GitHub</a> </div>
+				<div class="icon-below-pic">
+					<a href="https://github.com/your-username" class="icon brands fa-github"><span class="label">GitHub</span></a>
+				</div>
 			</header>
 		<!-- Footer -->
 			<footer id="footer">
-				<!--
-				<ul class="icons">
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				</ul>
-				-->
 				<p class="copyright">&copy; 2023 Rodrigo Vena. Website designed by: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
