--- a/index.html
+++ b/index.html
@@ -18,17 +18,14 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Rodrigo Vena</a></h1>
-					<p>I am a Fulbright scholar and a master of computer science graduate from the 
-						University of Central Florida. My research interests include software engineering, 
-						program analysis, and compiler design. Currently, I am collaborating as a researcher 
-						with Dr. Paul Gazzillo at the APPLeSEEdLab.</p>
+					<p>Master in computer science graduate from UCF</p>
 					<ul class="actions">
 						<li><a href="https://github.com/rndae/rndae.github.io/raw/b58b4462e4c2495ed304c6164cdf8090dc644e31/assets/resume.pdf" class="button primary icon solid fa-download">Resume</a></li>
 					</ul>
 				</div>
 				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>
 				<div class="icon-below-pic">
-					<a href="https://github.com/your-username" class="icon brands fa-github"><span class="label">GitHub</span></a>
+					<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
 				</div>
 			</header>
 		<!-- Footer -->
