--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="content">
-					<h1><a href="#">Rodrigo Vena</a></h1>
-					<p>Master in computer science graduate from UCF</p>
-					<ul class="actions">
-						<li><a href="https://github.com/rndae/rndae.github.io/raw/b58b4462e4c2495ed304c6164cdf8090dc644e31/assets/resume.pdf" class="button primary icon solid fa-download">Resume</a></li>
-					</ul>
-				</div>
-				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>
-				<div class="icon-below-pic">
-					<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
+				<div class="grid">
+					<div class="content">
+						<h1><a href="#">Rodrigo Vena</a></h1>
+						<p>Master of computer science graduate from UCF</p>
+						<ul class="actions">					
+							<li><div class="icon-below-pic">
+									<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
+								</div>
+							</li>
+						</ul>
+					</div>
+					<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>
 				</div>
 			</header>
 		<!-- Footer -->
