--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="grid">
-					<div class="content">
-						<h1><a href="#">Rodrigo Vena</a></h1>
-						<p>Master of computer science graduate from UCF</p>
-						<ul class="actions">					
-							<li><div class="icon-below-pic">
-									<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
-								</div>
-							</li>
-						</ul>
-					</div>
+				<div class="content">
+					<h1><a href="#">I'm Rodrigo Vena</a></h1>
+					<p>Computer scientist and Fulbright scholar</p>
+					<ul class="actions">					
+						<li><div class="icon-below-pic">
+								<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
+							</div>
+						</li>
+					</ul>
 				</div>
-				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>
+				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>				
 			</header>
 		<!-- Footer -->
 			<footer id="footer">
