test style pic inside content div

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 					<h1><a href="#">I'm Rodrigo Vena</a></h1>
 					<p>Computer scientist and Fulbright scholar</p>
 					<ul class="actions">					
-						<li><div class="icon-below-pic">
+						<li><div class="icon-header-pic">
 								<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
 							</div>
 						</li>
 					</ul>
-				</div>
-				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>				
+				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>
+				</div>				
 			</header>
 		<!-- Footer -->
 			<footer id="footer">
