--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">I'm Rodrigo Vena</a></h1>
+					<h1><a href="#">Rodrigo Vena</a></h1>
 					<p>Computer scientist and Fulbright scholar</p>
 					<ul class="actions">					
 						<li><div class="icon-header-pic">
 								<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
 							</div>
 						</li>
-					</ul>
-				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="" /></div></div>
-				</div>				
+					</ul>				
+				</div>	
+				<div class="inner">
+					::before
+					<img src="images/profile_pic.jpg" alt="profile pic" />
+					::after
+				</div>
 			</header>
 		<!-- Footer -->
 			<footer id="footer">
