testing with class image around prof pic

--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
 						</li>
 					</ul>				
 				</div>	
-				<div class="inner">
-					::before
-					<img src="images/profile_pic.jpg" alt="profile pic" />
-					::after
-				</div>
+				<div class="image"><div class="inner"><img src="images/profile_pic.jpg" alt="profile pic" /></div></div>
 			</header>
 		<!-- Footer -->
 			<footer id="footer">
