profile image responsive

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						</li>
 					</ul>				
 				</div>	
-				<div class="image"><div class="inner"><img src="images/profile_pic.jpg" alt="profile pic" /></div></div>
+				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="profile pic" /></div></div>
 			</header>
 		<!-- Footer -->
 			<footer id="footer">
