--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Rodrigo Vena</a></h1>
+					<h1>Rodrigo Vena</a></h1>
 					<p>Computer scientist and Fulbright scholar</p>
 					<ul class="actions">					
 						<li><div class="icon-header-pic">
@@ -26,7 +26,7 @@
 						</li>
 					</ul>				
 				</div>	
-				<div class="profile image"><div class="inner"><img src="images/profile_pic.jpg" alt="profile pic" /></div></div>
+				<div class="image phone"><div class="inner"><img src="images/profile_pic.jpg" alt="profile pic" /></div></div>
 			</header>
 		<!-- Footer -->
 			<footer id="footer">
