testing little svg graph

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 				<div class="content">
 					<h1>Rodrigo Vena</a></h1>
 					<p>Computer scientist and Fulbright scholar</p>
-					<ul class="actions">					
+					<ul class="actions">
+						<li>
+							<svg width="20px" height="20px" viewBox="0 0 20 20">
+								<circle cx="10" cy="10" r="9" fill="#d1e5f9"/>
+								<path d="M 10 10 Q 15 5 20 10 Q 25 15 20 20 Q 15 25 10 20 Q 5 15 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+							</svg>							
+						</li>
 						<li><div class="icon-header-pic">
 								<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
 							</div>
