graph circle background

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 							</div>
 						</li>
 						<li>
-							<svg width="34px" height="34px" viewBox="0 0 34 34">
+							<svg width="20px" height="20px" viewBox="0 0 20 20">
+								<circle cx="11" cy="11" r="10" fill="#000000"/>
 								<path d="M 10 10 Q 15 5 20 10 Q 25 15 20 20 Q 15 25 10 20 Q 5 15 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
 							</svg>							
 						</li>
