sharper graph figure

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 						</li>
 						<li>
 							<svg width="20px" height="20px" viewBox="0 0 20 20">
-								<path d="M 10 10 Q 15 5 20 10 Q 25 15 20 20 Q 15 25 10 20 Q 5 15 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-								<path d="M 10 10 Q 8 12 6 10 Q 4 8 6 6 Q 8 4 10 6 Q 12 8 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-								<path d="M 6 6 Q -2 -2 -2 -2 Q -2 -2 -2 -2 Q -2 -2 -2 -2 Q -2 -2 -2 -2 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-								<path d="M -2 -2 Q -4 -4 -6 -4 Q -8 -4 -8 -6 Q -8 -8 -6 -8 Q -4 -8 -4 -6 Q -4 -4 -2 -2 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-								<path d="M -4 -6 Q -3.5 -7.5 -3.5 -9.5 Q-3.5-11.5-3-13Q-2.5-14.5-1-14Q0.5-13.5-1-12Q-2.5-10.5-4-9Q-5.5-7.5-4-6Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-								</svg>				
+								<path d="M 10 10 L 15 5 L 18 8 L 15 10 L 18 12 L 15 15 L 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+								<path d="M 10 10 L 5 5 L 2 8 L 5 10 L 2 12 L 5 15 L 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+								<path d="M -2 -2 L -4 -4 L -6 -4 L -8 -6 L -6 -8 L -4 -6 L -2 -2 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+								<path d="M -2 -2 L -3.5 -7.5 L-3.5-11.5L-3-13L-1-14L-1-12L-4-9L-2-2Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+								<path d="M -4 -6 L -3.5 -7.5 L-3.5-11.5L-3-13L-1-14L-1-12L-4-9L-4-6Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+							</svg>		
 						</li>
 					</ul>				
 				</div>	
