graph is more dynamic

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 						</li>
 						<li>
 							<svg width="20px" height="20px" viewBox="0 0 20 20">
-								<path d="M 10 10 L 15 5 L 18 8 L 15 10 L 18 12 L 15 15 L 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-								<path d="M 10 10 L 5 5 L 2 8 L 5 10 L 2 12 L 5 15 L 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-								<path d="M -2 -2 L -4 -4 L -6 -4 L -8 -6 L -6 -8 L -4 -6 L -2 -2 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-								<path d="M -2 -2 L -3.5 -7.5 L-3.5-11.5L-3-13L-1-14L-1-12L-4-9L-2-2Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-								<path d="M -4 -6 L -3.5 -7.5 L-3.5-11.5L-3-13L-1-14L-1-12L-4-9L-4-6Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-							</svg>	
+								<path d="M 10 10 Q 12 8 14 10 Q 16 12 14 14 Q 12 16 10 14 Q 8 12 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+								<path d="M 10 10 Q 9.5 9.5 9.5 9 Q 9.5 8.5 9.75 8 Q 10 7.5 10.25 7 Q 10.5 6.5 11.25 6 Q 12 5.5 13.25 6 Q14.5,6.5,15,7Q15.5,7.5,15,8Q14.5,8.5,13,9Q11.5,9.5,10,10Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+								<path d="M -2 -2 Q -4 -4 -6 -4 Q -8 -4 -8 -6 Q -8 -8 -6 -8 Q -4 -8 -4 -6 Q -4 -4 -2 -2 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+								<path d="M -2 -2 Q -3.5 -7.5 -3.5 -11.5 Q-3.5-15.5-3-17Q-2.5-18.5-1-18Q0.5-17.5-1-16Q-2.5-14.5-4-13Q-5.5-11.5-4-10Q-2.5,-8.5,-2,-2Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+								<path d="M -4 -6 Q -3.75 -7 -3.75 -8 Q-3.75-9-3-10Q-2.25-11-1-11Q0,-11,-1,-10Q-2,-9,-3,-8Q-4,-7,-4,-6Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
+							</svg>
 						</li>
 					</ul>				
 				</div>	
