little graph changed position, left

--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
 					<h1>Rodrigo Vena</a></h1>
 					<p>Computer scientist and Fulbright scholar</p>
 					<ul class="actions">
-						<li><div class="icon-header-pic">
-								<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
-							</div>
-						</li>
 						<li>
-							<svg width="20px" height="20px" viewBox="0 0 20 20">
+							<svg width="20px" height="20px" viewBox="0 0 20 20" style="float: left;">
 								<circle cx="10" cy="10" r="1" fill="#d1e5f9"/>
 								<circle cx="5" cy="5" r="1" fill="#d1e5f9"/>
 								<circle cx="15" cy="5" r="1" fill="#d1e5f9"/>
@@ -34,6 +30,10 @@
 								<path d="M 10 10 L 15 5 L 15 15 L 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
 								<path d="M 10 10 L 5 5 L 5 15 L 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
 							</svg>
+						</li>
+						<li><div class="icon-header-pic">
+								<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
+							</div>
 						</li>
 					</ul>				
 				</div>	
