graph vertically aligned

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<p>Computer scientist and Fulbright scholar</p>
 					<ul class="actions">
 						<li>
-							<svg width="20px" height="20px" viewBox="0 0 20 20" style="float: left;">
+							<svg width="20px" height="20px" viewBox="0 0 20 20" style="float: left; vertical-align: middle;">
 								<circle cx="10" cy="10" r="1" fill="#d1e5f9"/>
 								<circle cx="5" cy="5" r="1" fill="#d1e5f9"/>
 								<circle cx="15" cy="5" r="1" fill="#d1e5f9"/>
@@ -32,7 +32,9 @@
 							</svg>
 						</li>
 						<li><div class="icon-header-pic">
-								<a href="https://github.com/rndae" class="icon brands fa-github"><span class="label">GitHub</span></a>
+								<a href="https://github.com/rndae" class="icon brands fa-github" style="vertical-align: middle;">
+									<span class="label">GitHub</span>
+								</a>
 							</div>
 						</li>
 					</ul>				
