details added, svg out, pdf file out

--- a/index.html
+++ b/index.html
@@ -18,22 +18,28 @@
 			<header id="header">
 				<div class="content">
 					<h1>Rodrigo Vena</a></h1>
-					<p>Computer scientist and Fulbright scholar</p>
+					<p>Master's in computer science graduate from <a href="https://www.ucf.edu/degree/computer-science-ms/">UCF</a><br>
+						Researcher at <a href="https://paulgazzillo.com/">APPLeSEEd Lab</a><br>
+						<a href="https://foreign.fulbrightonline.org/about/foreign-student-program">Fulbright</a> scholar
+					</p>
 					<ul class="actions">
 						<li>
-							<svg width="20px" height="20px" viewBox="0 0 20 20" style="float: left; vertical-align: middle;">
-								<circle cx="10" cy="10" r="1" fill="#d1e5f9"/>
-								<circle cx="5" cy="5" r="1" fill="#d1e5f9"/>
-								<circle cx="15" cy="5" r="1" fill="#d1e5f9"/>
-								<circle cx="5" cy="15" r="1" fill="#d1e5f9"/>
-								<circle cx="15" cy="15" r="1" fill="#d1e5f9"/>
-								<path d="M 10 10 L 15 5 L 15 15 L 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-								<path d="M 10 10 L 5 5 L 5 15 L 10 10 Z" fill="none" stroke="#d1e5f9" stroke-width="0.5"/>
-							</svg>
+							<div class="icon-header-pic">
+								<a href="https://github.com/rndae" class="icon brands fa-github">
+								<span class="label">GitHub</span>
+								</a>
+							</div>
+					    </li>
+						<li style="position: relative;">
+							<div class="icon-header-pic">
+									<a class="icon fal fa-file-alt" href="cvcvcvcv">
+									<span class="label">Resume</span></a>
+							</div>
 						</li>
-						<li><div class="icon-header-pic">
-								<a href="https://github.com/rndae" class="icon brands fa-github" style="vertical-align: middle;">
-									<span class="label">GitHub</span>
+						<li>
+							<div class="icon-header-pic">
+								<a class="icon fa-envelope" href="mailto:"rodrigo.vena.g@gmail.com";">
+									<span class="label">e-mail</span>
 								</a>
 							</div>
 						</li>
