--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</li>
 						<li>
 							<div class="icon-header-pic">
-								<a class="icon fa-envelope" href="mailto:"rodrigo.vena.g@gmail.com"">
+								<a class="icon fa-envelope" href="mailto:rodrigo.vena.g@gmail.com">
 									<span class="label">e-mail</span>
 								</a>
 							</div>
