--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					    </li>
 						<li style="position: relative;">
 							<div class="icon-header-pic">
-									<a class="icon fal fa-file-alt" href="cvcvcvcv">
+									<a class="icon fal fa-file-alt" href="https://github.com/rndae/rndae.github.io/blob/90b6b283a204f569ad3d352aed60276a94e81762/assets/cv.pdf">
 									<span class="label">Resume</span></a>
 							</div>
 						</li>
