--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					    </li>
 						<li style="position: relative;">
 							<div class="icon-header-pic">
-									<a class="icon fal fa-file-alt" href="https://github.com/rndae/rndae.github.io/raw/90b6b283a204f569ad3d352aed60276a94e81762/assets/cv.pdf">
+									<a class="icon fal fa-file-alt" href="https://raw.githubusercontent.com/rndae/rndae.github.io/92c57b64ee86ea94ed2b846ae239bcc118486aaf/resume.pdf">
 									<span class="label">Resume</span></a>
 							</div>
 						</li>
