--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 -->
 <html>
 	<head>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-287962676-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-MMTHZP7665"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 		
-		  gtag('config', 'UA-287962676-1');
+		  gtag('config', 'G-MMTHZP7665');
 		</script>
 		<title>Rodrigo Vena</title>
 		<meta charset="utf-8" />
