--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@ span {
 																<div class="item">
 																	<code>
 																		<img src="cloud-database.jpg" alt="Cloud Database">
-																			<span>Perform data retrieval of their databases in AWS<br>
+																			<span>Perform data retrieval of FreeCast's databases in AWS<br>
 																					<span class="skills">Skills: SQL, AWS Glue, Athena, Spark, AWS S3, Apache Spark</span>
 																					<br>
 																						<details>
-																							<summary>Description</summary>Performed complex and specific queries on large-scale data stored in their cloud service, and analyzed the results using PySpark</details>
+																							<summary>Description</summary>Performed complex and specific queries on large-scale data stored in FreeCast's cloud service, and analyzed the results using PySpark</details>
 																					</span>
 																				</code>
 																			</div>
@@ -368,7 +368,7 @@ span {
 																									<div class="item">
 																										<code>
 																											<img src="tdl-web.jpg" alt="TestDriveLIVE Website">
-																												<span>Developed the website for their sales channel FAST channel TestDriveLIVE<br>
+																												<span>Developed the website for FreeCast's sales TV channel TestDriveLIVE<br>
 																														<span class="skills">Next.js, React, Express, MySQL, Git</span>
 																														<br>
 																															<details>
