--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ span {
 																		<span class="skills">Python, Jupyter Notebooks, Selenium, Appscript, OpenAI API, YelpAPI, Google Sheets API</span>
 																		<br>
 																			<details>
-																				<summary>Description</summary>A scraper that collects contact information from broadband companies and content creators and stores them in Google Sheets.</details>
+																				<summary>Description</summary>A scraper that collects contact information from broadband companies and content creators and stores them in Google Sheets</details>
 																		</span>
 																	</code>
 																</div>
@@ -382,12 +382,12 @@ span {
 																												<div class="grid">
 																													<div class="item">
 																														<code>
-																															<img src="ceta.jpg" alt="CETA Project">
+																															<!-- <img src="ceta.jpg" alt="CETA Project"> -->
 																																<span>Corporate Entity Tracking Automation<br>
 																																		<span class="skills">Python, Neo4j, Cypher, Graph Algorithms</span>
 																																		<br>
 																																			<details>
-																																				<summary>Description</summary>Built a temporal graph calculus that generalizes and simplifies temporal graph management for corporate structures and reduces the complexity of Cypher queries.</details>
+																																				<summary>Description</summary>Built a temporal graph calculus that generalizes and simplifies temporal graph management for corporate structures and reduces the complexity of Cypher queries</details>
 																																		</span>
 																																	</code>
 																																</div>
@@ -397,7 +397,7 @@ span {
 																																<div class="grid">
 																																	<div class="item">
 																																		<code>
-																																			<img src="ner-npl.jpg" alt="NLP NER Model">
+																																			<!-- <img src="ner-npl.jpg" alt="NLP NER Model"> -->
 																																				<span>Recognition of Brand and Model in Product Titles<br>
 																																						<span class="skills">Python, RNN, TensorFlow, Flair, spaCy, NER, BI-LSTM-CRF</span>
 																																						<br>
@@ -409,7 +409,7 @@ span {
 																																				</div>
 																																				<div class="item">
 																																					<code>
-																																						<img src="lab.jpg" alt="Lab Management System">
+																																						<!-- <img src="lab.jpg" alt="Lab Management System">-->
 																																							<span>Laboratory Management System & VLE<br>
 																																									<span class="skills">PHP, Laravel, Apache, MariaDB, JavaScript, Angular, Git, JQuery</span>
 																																									<br>
@@ -421,7 +421,7 @@ span {
 																																							</div>
 																																							<div class="item">
 																																								<code>
-																																									<img src="sym-exe.jpg" alt="Symbolic Execution">
+																																									<!-- <img src="sym-exe.jpg" alt="Symbolic Execution"> -->
 																																										<span>Symbolic Execution C-like language<br>
 																																												<span class="skills">Java, ANTLR, Bash</span>
 																																												<br>
@@ -434,7 +434,7 @@ span {
 																									
 																																													<div class="item">
 																																														<code>
-																																															<img src="shader-oil.jpg" alt="Shader Oil">
+																																															<!-- <img src="shader-oil.jpg" alt="Shader Oil"> -->
 																																																<span>Shader, Iridescence of Oil on Water<br>
 																																																		<span class="skills">Unity 15f1, DX11, Cg, C#</span>
 																																																		<br>
@@ -446,7 +446,7 @@ span {
 																																																</div>
 																																																<div class="item">
 																																																	<code>
-																																																		<img src="pol-st.jpg" alt="Quantitative Variables">
+																																																		<!-- <img src="pol-st.jpg" alt="Quantitative Variables">-->
 																																																			<span>Quantitative variables for the evaluation of political stability<br>
 																																																					<span class="skills">MATLAB<br>
 																																																							<details>
