--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ span {
 																																<span>Corporate Entity Tracking Automation<br>
 																																		<span class="skills">Python, Neo4j, Cypher, Graph Algorithms</span>
 																																		<br>
-																																			<details>
+																																			<details open>
 																																				<summary>Description</summary>Built a temporal graph calculus that generalizes and simplifies temporal graph management for corporate structures and reduces the complexity of Cypher queries</details>
 																																		</span>
 																																	</code>
@@ -457,7 +457,7 @@ span {
 																																																				</div>
 																																																				<div class="item">
 																																																					<code>
-																																																						<img src="lstm-shakes.jpg" alt="LSTM Model">
+																																																					<!-- 	<img src="lstm-shakes.jpg" alt="LSTM Model"> -->
 																																																							<span>Shakespeare’s sonnet generator with LSTM model<br>
 																																																									<span class="skills">Python, TensorFlow-GPU, Jupyter Notebook</span>
 																																																									<br>
