6 projects thumbnails taken out index.html

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ span {
 									<div class="grid">
 										<div class="item">
 											<code>
-												<img src="yt-scraper.jpg" alt="Youtube Scraper">
+												<!-- <img src="yt-scraper.jpg" alt="Youtube Scraper"> -->
 													<span>Scraper for YouTube and Vudu metadata<br>
 															<span class="skills">Node.js, Python, Jupyter Notebooks, JavaScript, Selenium, AWS S3</span>
 															<br>
@@ -323,7 +323,7 @@ span {
 													</div>
 													<div class="item">
 														<code>
-															<img src="leadgen-scraper.jpg" alt="Lead Generation Scraper">
+															<!-- <img src="leadgen-scraper.jpg" alt="Lead Generation Scraper">-->
 																<span>Scraper for lead generation<br>
 																		<span class="skills">Python, Jupyter Notebooks, Selenium, Appscript, OpenAI API, YelpAPI, Google Sheets API</span>
 																		<br>
@@ -334,7 +334,7 @@ span {
 																</div>
 																<div class="item">
 																	<code>
-																		<img src="cloud-database.jpg" alt="Cloud Database">
+																		<!-- <img src="cloud-database.jpg" alt="Cloud Database">-->
 																			<span>Perform data retrieval of FreeCast's databases in AWS<br>
 																					<span class="skills">Skills: SQL, AWS Glue, Athena, Spark, AWS S3, Apache Spark</span>
 																					<br>
@@ -345,7 +345,7 @@ span {
 																			</div>
 																			<div class="item">
 																				<code>
-																					<img src="email-sys.jpg" alt="Email System">
+																					<!-- <img src="email-sys.jpg" alt="Email System">-->
 																						<span>Build and manage email system for massive cold outreach avoiding spam flags and complying with the CAN-SPAM Act<br>
 																								<span class="skills">Node.js, Express, Nodemailer, Mailgun, CAN-SPAM Act</span>
 																								<br>
@@ -356,7 +356,7 @@ span {
 																						</div>
 																						<div class="item">
 																							<code>
-																								<img src="app-scripts.jpg" alt="App Scripts">
+																								<!-- <img src="app-scripts.jpg" alt="App Scripts">-->
 																									<span>Automated internal processes creating Google App Scripts programs and web apps<br>
 																											<span class="skills">Google Apps Script, JavaScript, Google Workspace</span>
 																											<br>
@@ -367,7 +367,7 @@ span {
 																									</div>
 																									<div class="item">
 																										<code>
-																											<img src="tdl-web.jpg" alt="TestDriveLIVE Website">
+																											<!-- <img src="tdl-web.jpg" alt="TestDriveLIVE Website">-->
 																												<span>Developed the website for FreeCast's sales TV channel TestDriveLIVE<br>
 																														<span class="skills">Next.js, React, Express, MySQL, Git</span>
 																														<br>
