no borders and updated anchor elements for projects

--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
   grid-template-rows: repeat(3, auto);
   gap: 0px;
   background: rgba(0, 0, 0, 0.2);
-  border: 2px solid var(--text-color);
 
 }
 
@@ -403,7 +402,7 @@ span {
 																																						<br>
 																																							<details>
 																																								<summary>Description</summary>A tool that recognizes the brand and model names in product titles using natural language processing and deep learning techniques</details>
-																																							<a href="https://github.com/rndae/NER_product_model_name">GitHub</a>
+																																							<a href="https://github.com/rndae/NER_product_model_name">More</a>
 																																						</span>
 																																					</code>
 																																				</div>
@@ -427,7 +426,7 @@ span {
 																																												<br>
 																																													<details>
 																																														<summary>Description</summary> A tool that performs symbolic execution on a subset of the C programming language and generates test cases</details>
-																																													<a href="https://github.com/rndae/symbolic-execution-clikelang">GitHub</a>
+																																													<a href="https://github.com/rndae/symbolic-execution-clikelang">More</a>
 																																												</span>
 																																											</code>
 																																										</div>
@@ -451,7 +450,7 @@ span {
 																																																					<span class="skills">MATLAB<br>
 																																																							<details>
 																																																								<summary>Description</summary>A tool that calculates quantitative variables for the evaluation of political stability using sample entropy and multidimensional recurrence quantification analysis</details>
-																																																							<a href="https://github.com/rndae/Political-Stability-SampEN-MdRQA-">GitHub</a>
+																																																							<a href="https://github.com/rndae/Political-Stability-SampEN-MdRQA-">More</a>
 																																																						</span>
 																																																					</code>
 																																																				</div>
@@ -463,7 +462,7 @@ span {
 																																																									<br>
 																																																										<details>
 																																																											<summary>Description</summary>A tool that generates Shakespearean sonnets using a long short-term memory model trained on Shakespeare's sonnets</details>
-																																																										<a href="https://github.com/rndae/LSTM-Shakespeare-sonnet-generator">GitHub</a>
+																																																										<a href="https://github.com/rndae/LSTM-Shakespeare-sonnet-generator">More</a>
 																																																									</span>
 																																																								</code>
 																																																							</div>
