--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ span {
 								</div>
 								<p>
       (<a href="https://github.com/rndae">github</a>)
-      (<a href="https://raw.githubusercontent.com/rndae/rndae.github.io/92c57b64ee86ea94ed2b846ae239bcc118486aaf/resume.pdf">cv</a>)
+      <!--(<a href="https://raw.githubusercontent.com/rndae/rndae.github.io/92c57b64ee86ea94ed2b846ae239bcc118486aaf/resume.pdf">cv</a>) -->
       (<a href="mailto:rodrigo.vena.g@gmail.com">e-mail</a>)
     </p>
 								<h2>Data Analyst at FreeCast</h2>
