--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     body::before {
 	  z-index: 2;
-      content: "cv";
+      content: "";
       position: fixed;
       top: 0;
       left: 0;
@@ -140,7 +140,7 @@ h2 {
 }
 
 h2::before, h2::after {
-  content: "cv_h2"; 
+  content: ""; 
   position: absolute; 
   top: 50%; 
   height: 3px; 
