--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ h2 {
 
 h2::before, h2::after {
   content: ""; 
-  position: absolute; 
+  position: revert-layer; 
   top: 50%; 
   height: 3px; 
   background-color: transparent; 
