--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 			<title>Rodrigo Vena</title>
 			<style>
-    
+/* Previous color palette
+
     :root {
       --bg-color: #301F0C;
       --text-color: #DB8826;
@@ -13,6 +14,23 @@
 	  --text-bg-old: #9a8642;
 	  --text-yellow-bright: #F5D76E;
     }
+
+:root {
+  --bg-color: #301F0C;
+  --text-color: #DB8826;
+  --title-color: #784714;
+  --link-color: #9C4414;
+  --text-bg-old: #9a8642;
+  --text-yellow-bright: #F5D76E;
+}
+*/
+:root {
+  --text-color: #333333; /* A dark gray for text */
+  --title-color: #222222; /* A darker gray for titles */
+  --link-color: #66CCFF; /* A light blue for links */
+  --text-bg-old: #F0F0F0; /* A light gray for background */
+  --text-yellow-bright: #FFFF99; /* A bright yellow for accents */
+}
 
     
     @import url('https://fonts.googleapis.com/css?family=Inconsolata&display=swap');
