--- a/index.html
+++ b/index.html
@@ -306,16 +306,11 @@ span {
 			<div class="container">
 				<div class="noise"> </div>
 				<label>><label style="color: var(--text-bluwu-bold);"> rv@www</label>:<label style="color: var(--link-color);">~</label>
-					<label>$</label> load -p based</label>
+					<label>$</label>dshfioewur32oijcr32iour23our3ruo32iur82837498290-4975843hfwehfke</label>
 				<div>
 						<span>
 							<h1>Rodrigo Vena</h1>
-							<p>Master's in computer science graduate from <a href="https://www.ucf.edu/">UCF</a>
-								<br>
-      Researcher at <a href="https://paulgazzillo.com/">APPLeSEEd Lab</a>, Summer 2023<br>
-	  Data Analyst at <a href="https://www.freecast.com/">FreeCast</a>, August 2023 - February 2024<br>
-											<a href="https://foreign.fulbrightonline.org/about/foreign-student-program">Fulbright</a> scholar
-    </p>
+							
 									</span>
 									<div style="clear: right"/>
 								</div>
