--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ span {
 																	<code>
 																		<!-- <img src="cloud-database.jpg" alt="Cloud Database">-->
 																			<span>Perform data retrieval of FreeCast's databases in AWS<br>
-																					<span class="skills">Skills: SQL, AWS Glue, Athena, Spark, AWS S3, Apache Spark</span>
+																					<span class="skills">SQL, AWS Glue, Athena, Spark, AWS S3, Apache Spark</span>
 																					<br>
 																						<details>
 																							<summary>Description</summary>Performed complex and specific queries on large-scale data stored in FreeCast's cloud service, and analyzed the results using PySpark</details>
