--- a/index.html
+++ b/index.html
@@ -1,144 +1,61 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Rodrigo Vena</title>
-  <style>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4M5GDJ4X6"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-    :root {
-      --text-color: #333333;
-      --title-color: #222222;
-      --link-color: #0091e5;
-      --text-bg-old: #F0F0F0;
-      --text-bluwu-bold: #0D1B2A;
-    }
+    gtag('config', 'G-Y4M5GDJ4X6');
+    </script>
 
-    @import url('https://fonts.googleapis.com/css?family=Inconsolata&display=swap');
-
-    * {
-      font-family: 'Inconsolata', monospace;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      background: radial-gradient(circle at center, var(--bg-color) 0%, black 100%);
-    }
-
-    body::before {
-      z-index: 2;
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      pointer-events: none;
-
-      background: linear-gradient(to bottom, transparent 0%, rgba(252, 188, 44, 0.1) 50%, transparent 100%);
-      background-size: 100% 4px;
-
-      animation: flicker 0.15s infinite;
-
-      filter: contrast(150%) brightness(80%) grayscale(20%) sepia(10%) hue-rotate(-10deg);
-
-      mix-blend-mode: multiply;
-      transform: rotateX(2deg) rotateY(-1deg);
-    }
-
-
-    @keyframes flicker {
-      0% {
-        opacity: 0.87;
-      }
-
-      5% {
-        opacity: 0.95;
-      }
-
-      10% {
-        opacity: 0.87;
-      }
-
-      15% {
-        opacity: 0.9;
-      }
-
-      20% {
-        opacity: 0.9;
-      }
-
-      100% {
-        opacity: 0.85;
-      }
-    }
-
-
-    body {
-      animation: flicker 0.15s infinite;
-    }
-
-    .container {
-      position: relative;
-      width: 80%;
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-
-      filter: url(#distortion);
-      transform: perspective(800px) rotateX(2deg) rotateY(-1deg);
-    }
-
-    .noise {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0.2;
-      pointer-events: none;
-    }
-
-    a {
-      color: var(--link-color);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    li {
-      margin: 10px 0;
-      float: left;
-      padding-right: 44px;
-    }
-
-  </style>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rodrigo Vena</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <div class="container">
-      <ul>
-        <li>
-          <a href="https://github.com/rndae">github</a>
-        </li>
-        <li>
-          <a href="mailto:rodrigo.vena.g@gmail.com">e-mail</a>
-        </li>
-      </ul>
-  </div>
+    <div class="container">
+        <div class="header">
+            <h1 class="title">RODRIGO VENA</h1>
+            <div class="led-display">
+                <div class="time" id="current-time">13:25 EST</div>
+                <div class="name-time">
+                    <span class="name">Portfolio</span>
+                    <span class="elapsed-time" id="elapsed-time">0:00</span>
+                </div>
+            </div>
+            <div class="cd-slot">
+                <div class="cd-line"></div>
+            </div>
+            <div class="links">
+                <div class="link">
+                    <a href="https://github.com/rndae" class="circle-link" target="_blank">GITHUB 
+                      <button class="circle-button"></button>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="mailto:rodrigo.vena.g@gmail.com" class="circle-link" target="_blank">EMAIL
+                      <button class="circle-button"></button>
+                    </a>                  
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <div class="slider relative overflow-hidden" id="projects-slider">
+                <div class="slides flex transition-transform duration-500 ease-in-out" id="projects">
+                    <!-- Project items will be inserted here -->
+                </div>
+                <button class="prev absolute top-1/2 left-0 transform -translate-y-1/2 bg-black text-white p-2">❮</button>
+                <button class="next absolute top-1/2 right-0 transform -translate-y-1/2 bg-black text-white p-2">❯</button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </body>
-
 </html>
